sandc/test/fixtures/astRegression/shouldFail/productions/statement/ForRangeIndexBinding.sand
pub class ForRangeIndexBinding {
    foo() {
        for @i in low upuntil high {
            
        }
    }
}